[tool.poetry]
name = "toolbox"
version = "3.8.1"
description = ""
authors = ["mdeboc"]

[tool.poetry.dependencies]
python = "^3.7.2"
numpy = "1.19"
pandas = "1.0.5"
matplotlib = "^3.1.1"
jupyter = "1.0.0"
jupyterlab = "2.1.5"
jupyter_contrib_nbextensions = "0.5.1"
jupytext = "1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
